src/tests/snapshots/swayward__tests__window_opening__check_fullscreen_maximize@fsF-wfsBN-wmA.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: BN\nwant maximized: A\nconfig:\nwindow-rule {\n    open-fullscreen false\n}"
expression: snapshot
---
initial configure:
size: 1248 × 688, bounds: 1248 × 688, states: []

post-map configures:
size: 1280 × 720, bounds: 1248 × 688, states: [Maximized]
size: 1280 × 720, bounds: 1248 × 688, states: [Maximized, Activated]

unmaximize configure:
size: 1248 × 688, bounds: 1248 × 688, states: [Activated]
