src/tests/snapshots/swayward__tests__window_opening__check_fullscreen_maximize@fsF-wfsBN-wmAU.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: BN\nwant maximized: AU\nconfig:\nwindow-rule {\n    open-fullscreen false\n}"
expression: snapshot
---
initial configure:
size: 1248 × 688, bounds: 1248 × 688, states: []

post-map configures:
size: 1248 × 688, bounds: 1248 × 688, states: []
size: 1248 × 688, bounds: 1248 × 688, states: [Activated]
